--- a/MarcelJoachimKloubert.CLRToolbox.45/MarcelJoachimKloubert.CLRToolbox.45.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.45/MarcelJoachimKloubert.CLRToolbox.45.csproj
@@ -474,6 +474,15 @@
       <Link>Helpers\StringHelper.IsNullOrWhiteSpace.cs</Link>
       <DependentUpon>StringHelper.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.40\Composition\InstanceComposerBase.cs">
+      <Link>Composition\InstanceComposerBase.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.40\Composition\MultiInstanceComposer.cs">
+      <Link>Composition\MultiInstanceComposer.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.40\Composition\SingleInstanceComposer.cs">
+      <Link>Composition\SingleInstanceComposer.cs</Link>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.40\Diagnostics\Execution\LogCommandBase.Execute.cs">
       <Link>Diagnostics\Execution\LogCommandBase.Executa.cs</Link>
       <DependentUpon>LogCommandBase.cs</DependentUpon>
