application server, helper / extension methods improvements and compatibility
- ADD: started to implement application with first module "Remote
Communication Module"
- ADD: AsHexString() extension and helper methods
- ADD: implementation of System.AggregateException and System.Func<T<
TResult> types from .NET framework for compatibility reasons
- CHG: code improvements

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,6 @@
 
 /MarcelJoachimKloubert.CLRToolbox.XNA/TestGame1/TestGame1Content/bin
 /MarcelJoachimKloubert.CLRToolbox.XNA/TestGame1/TestGame1Content/obj
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.TestHost/modules
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Modules.RemoteComm/bin
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Modules.RemoteComm/obj
