--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -62,6 +62,9 @@
     <Compile Include="Configuration\ConfigRepositoryBase.cs" />
     <Compile Include="Configuration\IConfigRepository.cs" />
     <Compile Include="Configuration\Impl\KeyValuePairConfigRepository.cs" />
+    <Compile Include="Data\CommonConverter.ParseInputValueForChangeType.cs">
+      <DependentUpon>CommonConverter.cs</DependentUpon>
+    </Compile>
     <Compile Include="Data\CommonConverter.cs" />
     <Compile Include="Data\ConverterBase.cs" />
     <Compile Include="Data\IConverter.cs" />
@@ -89,9 +92,13 @@
     <Compile Include="Helpers\CollectionHelper.ToArray.IEnumerable.cs">
       <DependentUpon>CollectionHelper.cs</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\StringHelper.AsHexString.cs">
+      <DependentUpon>StringHelper.cs</DependentUpon>
+    </Compile>
     <Compile Include="Helpers\StringHelper.AsStringExtension.cs">
       <DependentUpon>StringHelper.cs</DependentUpon>
     </Compile>
+    <Compile Include="IHasName.cs" />
     <Compile Include="IO\ConsoleBase.cs" />
     <Compile Include="IO\ConsoleBase.dotNET.cs">
       <DependentUpon>ConsoleBase.cs</DependentUpon>
@@ -193,9 +200,16 @@
     <Compile Include="IO\SystemConsole.dotNET.cs">
       <DependentUpon>SystemConsole.cs</DependentUpon>
     </Compile>
+    <Compile Include="IRunnable.cs" />
     <Compile Include="ITMDisposable.cs" />
     <Compile Include="ITMEquatable.cs" />
     <Compile Include="ITMObject.cs" />
+    <Compile Include="Objects\IdentifiableObjectContextBase.cs" />
+    <Compile Include="Objects\IObjectContext.cs" />
+    <Compile Include="Objects\ObjectContextBase.cs" />
+    <Compile Include="Objects\ObjectContextBase.dotNET.cs">
+      <DependentUpon>ObjectContextBase.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scripting\CommonScriptFunctionSetup.cs" />
     <Compile Include="Scripting\Export\ExportScriptFuncAttribute.cs" />
@@ -229,6 +243,9 @@
     <Compile Include="ServiceLocation\ServiceLocatorBase.Interface.cs">
       <DependentUpon>ServiceLocatorBase.cs</DependentUpon>
     </Compile>
+    <Compile Include="ServiceLocation\ServiceLocatorBase.ParseValue.cs">
+      <DependentUpon>ServiceLocatorBase.cs</DependentUpon>
+    </Compile>
     <Compile Include="TMApplication.cs" />
     <Compile Include="Data\GlobalConverter.cs" />
     <Compile Include="DisposableBase.cs" />
@@ -239,6 +256,11 @@
     <Compile Include="TMObject.Fields.cs">
       <DependentUpon>TMObject.cs</DependentUpon>
     </Compile>
+    <Compile Include="_Compatibility\System\AggregateException.cs" />
+    <Compile Include="_Compatibility\System\AggregateException.dotNET.cs">
+      <DependentUpon>AggregateException.cs</DependentUpon>
+    </Compile>
+    <Compile Include="_Compatibility\System\Func.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="..\LICENSE">
