--- a/MarcelJoachimKloubert.CLRToolbox.35/MarcelJoachimKloubert.CLRToolbox.35.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.35/MarcelJoachimKloubert.CLRToolbox.35.csproj
@@ -83,6 +83,10 @@
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Data\CommonConverter.cs">
       <Link>Data\CommonConverter.cs</Link>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Data\CommonConverter.ParseInputValueForChangeType.cs">
+      <Link>Data\CommonConverter.ParseInputValueForChangeType.cs</Link>
+      <DependentUpon>CommonConverter.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\data\ConverterBase.cs">
       <Link>Data\ConverterBase.cs</Link>
     </Compile>
@@ -239,6 +243,10 @@
       <Link>Helpers\ScriptHelper.SetSimplePredicateWrapper.cs</Link>
       <DependentUpon>ScriptHelper.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\StringHelper.AsHexString.cs">
+      <Link>Helpers\StringHelper.AsHexString.cs</Link>
+      <DependentUpon>StringHelper.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\StringHelper.AsString.cs">
       <Link>Helpers\StringHelper.AsString.cs</Link>
       <DependentUpon>StringHelper.cs</DependentUpon>
@@ -249,6 +257,9 @@
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\StringHelper.cs">
       <Link>Helpers\StringHelper.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\IHasName.cs">
+      <Link>IHasName.cs</Link>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\IIdentifiable.cs">
       <Link>IIdentifiable.cs</Link>
@@ -281,6 +292,9 @@
       <Link>IO\SystemConsole.dotNET.cs</Link>
       <DependentUpon>SystemConsole.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\IRunnable.cs">
+      <Link>IRunnable.cs</Link>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\ITMDisposable.cs">
       <Link>ITMDisposable.cs</Link>
     </Compile>
@@ -289,6 +303,19 @@
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\ITMObject.cs">
       <Link>ITMObject.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\objects\IdentifiableObjectContextBase.cs">
+      <Link>Objects\IdentifiableObjectContextBase.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\objects\IObjectContext.cs">
+      <Link>Objects\IObjectContext.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\objects\ObjectContextBase.cs">
+      <Link>Objects\ObjectContextBase.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Objects\ObjectContextBase.dotNET.cs">
+      <Link>Objects\ObjectContextBase.dotNET.cs</Link>
+      <DependentUpon>ObjectContextBase.cs</DependentUpon>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Scripting\CommonScriptFunctionSetup.cs">
       <Link>Scripting\CommonScriptFunctionSetup.cs</Link>
@@ -351,6 +378,10 @@
       <Link>ServiceLocation\ServiceLocatorBase.Interface.cs</Link>
       <DependentUpon>ServiceLocatorBase.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\ServiceLocation\ServiceLocatorBase.ParseValue.cs">
+      <Link>ServiceLocation\ServiceLocatorBase.ParseValue.cs</Link>
+      <DependentUpon>ServiceLocatorBase.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\TMApplication.cs">
       <Link>TMApplication.cs</Link>
     </Compile>
@@ -364,6 +395,13 @@
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\TMObject.Fields.cs">
       <Link>TMObject.Fields.cs</Link>
       <DependentUpon>TMObject.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\_compatibility\system\AggregateException.cs">
+      <Link>_Compatibility\System\AggregateException.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\_compatibility\system\AggregateException.dotNET.cs">
+      <Link>_Compatibility\System\AggregateException.dotNET.cs</Link>
+      <DependentUpon>AggregateException.cs</DependentUpon>
     </Compile>
     <Compile Include="ComponentModel\NotificationObjectBase.PropertyChange35.cs" />
     <Compile Include="Extensions\ClrToolboxExtensionMethods.cs" />
@@ -411,6 +449,9 @@
     </Compile>
     <Compile Include="Extensions\Scripting.SetSimplePredicate.cs">
       <DependentUpon>Scripting.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Extensions\Strings.AsHexString.cs">
+      <DependentUpon>Strings.cs</DependentUpon>
     </Compile>
     <Compile Include="Extensions\Strings.AsString.cs">
       <DependentUpon>Strings.cs</DependentUpon>
